data/derived/comb/progs/unify/prog7477.ml.out
Characters 97-99:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type (int -> int) list
       but an expression was expected of type int list
       Type int -> int is not compatible with type int 
